fix flag alignment

--- a/public/css/translation-component.css
+++ b/public/css/translation-component.css
@@ -36,7 +36,7 @@ html {
 	flex-direction: column;
 	text-align: center;
 	font-size: 18px;
-	margin-right: 38px;
+	margin: 0;
 }
 
 .ftlabs-language-options-selection .o-forms__label:before {
@@ -59,6 +59,10 @@ html {
 	border: none;
 }
 
+.ftlabs-language-options-selection .o-forms__radio + .o-forms__label{
+	padding-left: 0;
+}
+
 .ftlabs-language-options-selection .o-forms__radio + .o-forms__label::after {
 	position: absolute;
 	height: 25px;
@@ -70,7 +74,7 @@ html {
 		no-repeat;
 	background-size: cover;
 	top: 20px;
-	left: 65px;
+	left: 25px;
 }
 
 .ftlabs-translation__language-selection-element[data-lang-code='DE']
@@ -156,8 +160,9 @@ html {
 }
 
 .ftlabs-language-options-selection {
-	/* align-self: center; */
+	/*align-self: center; */
 	display: flex;
+	justify-content: space-between;
 }
 
 .ftlabs-translation__form {
@@ -198,10 +203,6 @@ html {
 
 	.o-forms__group--inline.ftlabs-translation__tickbox {
 		margin-bottom: 1px;
-	}
-
-	.ftlabs-translation__language-selection-element {
-		margin-right: -4px;
 	}
 
 	.topper--opinion > .topper__content > .topper__headline > :nth-child(2) {
